--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "ForumDB": "Server=(localdb)\\mssqllocaldb;Database=ForumDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "ForumDB": "Server=tcp:snackis-kg.database.windows.net,1433;Initial Catalog=DBSnackisForumAPI;Persist Security Info=False;User ID=adminsnackis;Password=Snackis123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        //"ForumDB": "Server=(localdb)\\mssqllocaldb;Database=ForumDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
 }
